Removed fadetext class from first paragraph

--- a/index.htm
+++ b/index.htm
@@ -183,7 +183,7 @@
 		<audio id="audioplayer" preload="auto" autoplay>
 			<source src="Pachabelly.mp3" type="audio/mp3" />
 		</audio>
-		<p class="fadetext">Tijdens de Nationale Herdenking herdenken wij allen - burgers en militairen - die in het Koninkrijk der Nederlanden of waar ook ter wereld zijn omgekomen of vermoord sinds het uitbreken van de Tweede Wereldoorlog, in oorlogssituaties en bij vredesoperaties.</p>
+		<p>Tijdens de Nationale Herdenking herdenken wij allen - burgers en militairen - die in het Koninkrijk der Nederlanden of waar ook ter wereld zijn omgekomen of vermoord sinds het uitbreken van de Tweede Wereldoorlog, in oorlogssituaties en bij vredesoperaties.</p>
 		<div class="zoom">
 			<img src="flowers.jpg">
 		</div>
