Removed first paragraph

--- a/index.htm
+++ b/index.htm
@@ -34,7 +34,7 @@
 
 	.container {
 		width: 502px;
-		margin: 15px auto;
+		margin: 60px auto 15px auto;
 	}
 
 	.fadetext {
@@ -161,7 +161,6 @@
 
 		.container {
 			width: 282px;
-			margin: 10px auto;
 		}
 
 		.zoom {
@@ -183,7 +182,6 @@
 		<audio id="audioplayer" preload="auto" autoplay>
 			<source src="Pachabelly.mp3" type="audio/mp3" />
 		</audio>
-		<p>Tijdens de Nationale Herdenking herdenken wij allen - burgers en militairen - die in het Koninkrijk der Nederlanden of waar ook ter wereld zijn omgekomen of vermoord sinds het uitbreken van de Tweede Wereldoorlog, in oorlogssituaties en bij vredesoperaties.</p>
 		<div class="zoom">
 			<img src="flowers.jpg">
 		</div>
